Added buttons for daily and five-day forecast

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="current-weather">
         <header>
-            <h2>Check weather forcast for your city!</h2>
+            <h2>Check current weather for your city!</h2>
             <input type="text" autocomplete="off" class="search" 
             placeholder="Search your city">
         </header>  
@@ -23,6 +23,10 @@
                 <div class="temp">23<span>&deg;C</span></div>
                 <div class="description">Cloudy</div>
                 <div class="temperatures">23&deg;c/19&deg;c</div>
+            </div>
+            <div class="buttons">
+                <button class="daily">Check daily forcast</button>
+                <button class="five-day">Check 5-day forcast</button>
             </div>
         </main>
     </div>
