Implementing five day forecast

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="current-weather">
         <header>
-            <h2>Check current weather for your city!</h2>
+            <h2>Check weather for your city!</h2>
             <input type="text" autocomplete="off" class="search" 
             placeholder="Search your city">
         </header>  
@@ -24,9 +24,38 @@
                 <div class="description">Cloudy</div>
                 <div class="temperatures">23&deg;c/19&deg;c</div>
             </div>
-            <div class="buttons">
-                <button class="daily">Check daily forcast</button>
-                <button class="five-day">Check 5-day forcast</button>
+            
+            <div class="fiveDay">
+                <div class="dayOne">
+                    <div class="weekDay">Monday</div>
+                    <div class="temp">23<span>&deg;C</span></div>
+                    <div class="description">Cloudy</div>
+                    <div class="temperatures">23&deg;c/19&deg;c</div>
+                </div>
+                <div class="dayTwo">
+                    <div class="weekDay">Tuesday</div>
+                    <div class="temp">23<span>&deg;C</span></div>
+                    <div class="description">Cloudy</div>
+                    <div class="temperatures">23&deg;c/19&deg;c</div>
+                </div>
+                <div class="dayThree">
+                    <div class="weekDay">Wednesday</div>
+                    <div class="temp">23<span>&deg;C</span></div>
+                    <div class="description">Cloudy</div>
+                    <div class="temperatures">23&deg;c/19&deg;c</div>
+                </div>
+                <div class="dayFour">
+                    <div class="weekDay">Thursday</div>
+                    <div class="temp">23<span>&deg;C</span></div>
+                    <div class="description">Cloudy</div>
+                    <div class="temperatures">23&deg;c/19&deg;c</div>
+                </div>
+                <div class="dayFive">
+                    <div class="weekDay">Friday</div>
+                    <div class="temp">23<span>&deg;C</span></div>
+                    <div class="description">Cloudy</div>
+                    <div class="temperatures">23&deg;c/19&deg;c</div>
+                </div>
             </div>
         </main>
     </div>
