--- a/index.html
+++ b/index.html
@@ -27,34 +27,34 @@
             
             <div class="fiveDay">
                 <div class="dayOne">
-                    <div class="weekDay">Monday</div>
-                    <div class="temp">23<span>&deg;C</span></div>
-                    <div class="description">Cloudy</div>
-                    <div class="temperatures">23&deg;c/19&deg;c</div>
+                    <div class="weekDayOne">Monday</div>
+                    <div class="tempOne">23<span>&deg;C</span></div>
+                    <div class="descriptionOne">Cloudy</div>
+                    <div class="temperaturesOne">23&deg;c/19&deg;c</div>
                 </div>
                 <div class="dayTwo">
-                    <div class="weekDay">Tuesday</div>
-                    <div class="temp">23<span>&deg;C</span></div>
-                    <div class="description">Cloudy</div>
-                    <div class="temperatures">23&deg;c/19&deg;c</div>
+                    <div class="weekDayTwo">Tuesday</div>
+                    <div class="tempTwo">23<span>&deg;C</span></div>
+                    <div class="descriptionTwo">Cloudy</div>
+                    <div class="temperaturesTwo">23&deg;c/19&deg;c</div>
                 </div>
                 <div class="dayThree">
-                    <div class="weekDay">Wednesday</div>
-                    <div class="temp">23<span>&deg;C</span></div>
-                    <div class="description">Cloudy</div>
-                    <div class="temperatures">23&deg;c/19&deg;c</div>
+                    <div class="weekDayThree">Wednesday</div>
+                    <div class="tempThree">23<span>&deg;C</span></div>
+                    <div class="descriptionThree">Cloudy</div>
+                    <div class="temperaturesThree">23&deg;c/19&deg;c</div>
                 </div>
                 <div class="dayFour">
-                    <div class="weekDay">Thursday</div>
-                    <div class="temp">23<span>&deg;C</span></div>
-                    <div class="description">Cloudy</div>
-                    <div class="temperatures">23&deg;c/19&deg;c</div>
+                    <div class="weekDayFour">Thursday</div>
+                    <div class="tempFour">23<span>&deg;C</span></div>
+                    <div class="descriptionFour">Cloudy</div>
+                    <div class="temperaturesFour">23&deg;c/19&deg;c</div>
                 </div>
                 <div class="dayFive">
-                    <div class="weekDay">Friday</div>
-                    <div class="temp">23<span>&deg;C</span></div>
-                    <div class="description">Cloudy</div>
-                    <div class="temperatures">23&deg;c/19&deg;c</div>
+                    <div class="weekDayFive">Friday</div>
+                    <div class="tempFive">23<span>&deg;C</span></div>
+                    <div class="descriptionFive">Cloudy</div>
+                    <div class="temperaturesFive">23&deg;c/19&deg;c</div>
                 </div>
             </div>
         </main>
